--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -48,7 +48,7 @@
         </div>
       </main>
       <footer
-        class="max-x-[40rem] w-full bg-neutral-900 border-t-2 border-t-[color:#333] p-4 text-sm text-neutral-400 mt-16"
+        class="max-x-[40rem] w-full bg-slate-900 border-t-2 border-t-[color:#333] p-4 text-sm text-slate-400 mt-16"
       >
         <div class="container w-full max-w-lg mx-auto">
           <div class="flex flex-row justify-between">
