Improve wording of error mesage

--- a/app/templates/nobrowser.html
+++ b/app/templates/nobrowser.html
@@ -40,7 +40,7 @@
             Unfortunatly you cannot open the calendar in the browser.
           </p>
           <p>
-            But there is no need to panic on the page where you created the calendar there are even instruction how to add it to your calendar app.
+            But there is no need to panic, on the page where you created the calendar there are even instruction how to add it to your calendar app.
           </p>
           </div>
       </main>
