Add better marketing for tuwel links

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -56,7 +56,8 @@
                             </div>
                             <div class="mb-1">
                                 Details: <a href="https://tiss.tuwien.ac.at/course/courseDetails.xhtml?dswid=8406&dsrid=953&courseNr=185A91" lang="de" class="text-blue-400">Lecture</a>,
-                                <a href="https://tiss.tuwien.ac.at/events/roomSchedule.xhtml?dswid=4026&dsrid=571&roomCode=AUDI" lang="de" class="text-blue-400">Room Reservation</a>
+                                <a href="https://tuwel.tuwien.ac.at/course/view.php?id=74426" class="text-blue-400">TUWEL</a>,
+                                <a href="https://tiss.tuwien.ac.at/events/roomSchedule.xhtml?dswid=4026&dsrid=571&roomCode=AUDI" lang="de" class="text-blue-400">Room Schedule</a>
                             </div>
                             <div class="mb-1">
                                 Room: <a lang="de" class="text-blue-400" href="https://tuw-maps.tuwien.ac.at/?q=BAU178A">1 Audi. Max.-
